--- a/index.html
+++ b/index.html
@@ -1,1 +1,180 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  	<title>Kirk Youngdahl</title>
+  	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link href='https://fonts.googleapis.com/css?family=Germania One' rel='stylesheet'>
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <script src="index.jss"></script>
+</head>
+
+
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
+
+
+
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#home">Kirk Youngdahl</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#aboutme" data-toggle="collapse" data-target="#bio"><b>ABOUT ME</b></a></li>
+        <li><a href="#resume"><b>RESUME</b></a></li>
+        <li><a href="#portfolio"><b>PORTFOLIO</b></a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div id="home" class="container text-center">
+  <h2 class="top">hello</h1>
+</div> 
+
+<a data-toggle="collapse" href="#first">
+<div id="aboutme" class="container text-center">
+  
+  	<h1 class="header">About Me</h1>
+    <div id="first" class="collapse">
+  	<div class="row me">
+  		<div class="col-sm-12 text-left">
+    		<p>My name is Kirk Youngdahl.</p>
+      		<p>I have always had a fascination with computers since childhood and always believed that I would be the "computer guy" when I grew up.</p>
+      		<p>My first exposure was on a ViewSonic desktop that was shared by our entire family of six. It weighed a ton and it sat in the corner of our cold, dark basement. It was competitive to find time to myself to play on it, but when I did, it opened up a whole new world. The computer was my command center and my potential was limitless. Looking back, those were definitely the simpler days and I am amazed by the advancements that have occurred in my short lifetime.</p>
+      		<p>I have studied many aspects of IT over the last few years and have been amazed by all the different directions these studies could take me in my career. My future holds much promise with my upcoming graduation in December 2017 with a B.S. in Information Technology.  I am excited for the opportunity to be a contributor to further innovation in the tech world in the years ahead. </p>
+          <p>Through course work at Metrostate I have constructed multiple websites and developed a fully functional database.</p>
+          <p>During my enrollment at Minnesota State - Mankato I took a System Analysis and Design course. This class gave us the opportunity to consult with actual company representatives and design a software application specifically for them. This project allowed me to demonstrate leadership for my struggling team resulting in an A grade for the semester.  I was offered a tutor position for the class by my professor for the following semester.</p>
+          <p>I had the opportunity to do a Summer internship with WinField, at Land o' Lakes company in 2015. This experience consisted of working with Linux systems, writing scripts for file systems or writing macros for marketing analysis. The highlight of my internship was working on WinField's data tool, Equinox, where I added new ways to sort data.</p>
+          <p>Past job experiences I have worked closely with others in a fast-paced setting. I am a strong problem-solver, effective communicator, and a computer-literate performer with extensive software proficiency covering a variety of applications.</p>
+    	</div>
+  	</div>
+  	<div class="row me">   	
+    	<div id="bio" class="col-sm-12">
+          <img src="images/hipsterbaby.jpg" alt="Random Name">
+        </div>    
+  	</div>
+  </div>
+ 
+</div>
+</a>
+
+
+<a data-toggle="collapse" href="#second">
+  <div id="resume" class="container text-center">
+      <h1 class="header">Resume</h1><br>
+      <object media-type="pdf" width="100%" height="500" data="images/kirk_youngdahl_resume.pdf"></object>
+    </div>
+  </div>
+
+
+<div id="portfolio" class="container text-center">
+  <h1 class="header">Portfolio</h1>
+  <p>here are past projects I have worked on starting with most recent</p>
+  <div class="row">
+
+  <!-- SILC project -->
+  <div class="col-md-4">
+    <div class="thumbnail text-center">
+        <div class="carousel-inner" role="listbox">
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+              <li data-target="#myCarousel" data-slide-to="3"></li>
+              <li data-target="#myCarousel" data-slide-to="4"></li>
+            </ol>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active ph">
+                <a href=/mywebsite/images/silc_img_0.jpg>
+                <img src="/mywebsite/images/silc_img_0.jpg" alt="Chania">
+                </a>
+              </div>
+              <div class="item ph">
+                <a href=/mywebsite/images/silc_img_1.jpg>
+                <img src="/mywebsite/images/silc_img_1.jpg" alt="Chania">
+                </a>
+              </div>
+              <div class="item ph">
+                <a href=/mywebsite/images/silc_img_2.jpg>
+                <img src="/mywebsite/images/silc_img_2.jpg" alt="Flower">
+                </a>
+              </div>
+              <div class="item ph">
+                <a href=/mywebsite/images/silc_img_3.jpg>
+                <img src="/mywebsite/images/silc_img_3.jpg" alt="Flower">
+                </a>
+              </div>
+              <div class="item ph">
+                <a href=/mywebsite/images/silc_img_4.jpg>
+                <img src="/mywebsite/images/silc_img_4.jpg" alt="Flower">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      <div class="caption">
+        <p>Lorem ipsum...</p>
+      </div>
+    </div>
+  </div>
+
+  
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <a href="/w3images/nature.jpg">
+        <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
+        <div class="caption">
+          <p>Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <a href="/w3images/fjords.jpg">
+        <img src="/w3images/fjords.jpg" alt="Fjords" style="width:100%">
+        <div class="caption">
+          <p>Lorem ipsum...</p>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
+</div>
+
+
+<footer class="text-center">
+  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a><br><br>
+  <p>This website was created using a bootstrap</p> 
+</footer>
+
+<script>
+$(document).ready(function(){
+    // Initialize Tooltip
+    $('[data-toggle="tooltip"]').tooltip(); 
+})
+</script>
+
+
+</body>
+
+</html>
