--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#home">Kirk Youngdahl</a>
     </div>
@@ -41,13 +41,8 @@
   </div>
 </nav>
 
-<div id="home" class="container text-center">
-  <h2 class="top">hello</h1>
-</div> 
-
-<a data-toggle="collapse" href="#first">
 <div id="aboutme" class="container text-center">
-  
+
   	<h1 class="header">About Me</h1>
     <div id="first" class="collapse">
   	<div class="row me">
@@ -62,23 +57,15 @@
           <p>Past job experiences I have worked closely with others in a fast-paced setting. I am a strong problem-solver, effective communicator, and a computer-literate performer with extensive software proficiency covering a variety of applications.</p>
     	</div>
   	</div>
-  	<div class="row me">   	
+  	<div class="row me">
     	<div id="bio" class="col-sm-12">
           <img src="images/hipsterbaby.jpg" alt="Random Name">
-        </div>    
+        </div>
   	</div>
   </div>
- 
+
 </div>
 </a>
-
-
-<a data-toggle="collapse" href="#second">
-  <div id="resume" class="container text-center">
-      <h1 class="header">Resume</h1><br>
-      <object media-type="pdf" width="100%" height="500" data="images/kirk_youngdahl_resume.pdf"></object>
-    </div>
-  </div>
 
 
 <div id="portfolio" class="container text-center">
@@ -89,53 +76,11 @@
   <!-- SILC project -->
   <div class="col-md-4">
     <div class="thumbnail text-center">
-        <div class="carousel-inner" role="listbox">
-          <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#myCarousel" data-slide-to="1"></li>
-              <li data-target="#myCarousel" data-slide-to="2"></li>
-              <li data-target="#myCarousel" data-slide-to="3"></li>
-              <li data-target="#myCarousel" data-slide-to="4"></li>
-            </ol>
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-              <div class="item active ph">
-                <a href=/mywebsite/images/silc_img_0.jpg>
-                <img src="/mywebsite/images/silc_img_0.jpg" alt="Chania">
-                </a>
-              </div>
-              <div class="item ph">
-                <a href=/mywebsite/images/silc_img_1.jpg>
-                <img src="/mywebsite/images/silc_img_1.jpg" alt="Chania">
-                </a>
-              </div>
-              <div class="item ph">
-                <a href=/mywebsite/images/silc_img_2.jpg>
-                <img src="/mywebsite/images/silc_img_2.jpg" alt="Flower">
-                </a>
-              </div>
-              <div class="item ph">
-                <a href=/mywebsite/images/silc_img_3.jpg>
-                <img src="/mywebsite/images/silc_img_3.jpg" alt="Flower">
-                </a>
-              </div>
-              <div class="item ph">
-                <a href=/mywebsite/images/silc_img_4.jpg>
-                <img src="/mywebsite/images/silc_img_4.jpg" alt="Flower">
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      <div class="caption">
-        <p>Lorem ipsum...</p>
-      </div>
+        <a href="portfolio/RankByX/">Rank By X Puzzle</a>
     </div>
   </div>
 
-  
+
   <div class="col-md-4">
     <div class="thumbnail">
       <a href="/w3images/nature.jpg">
@@ -164,13 +109,13 @@
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>This website was created using a bootstrap</p> 
+  <p>This website was created using a bootstrap</p>
 </footer>
 
 <script>
 $(document).ready(function(){
     // Initialize Tooltip
-    $('[data-toggle="tooltip"]').tooltip(); 
+    $('[data-toggle="tooltip"]').tooltip();
 })
 </script>
 
