--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <!-- SILC project -->
   <div class="col-md-4">
     <div class="thumbnail text-center">
-        <a href="portfolio/RankByX/index.php">Rank By X Puzzle</a>
+        <a href="portfolio/RankByX">Rank By X Puzzle</a>
     </div>
   </div>
 
