--- a/index.html
+++ b/index.html
@@ -33,75 +33,35 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#aboutme" data-toggle="collapse" data-target="#bio"><b>ABOUT ME</b></a></li>
-        <li><a href="#resume"><b>RESUME</b></a></li>
-        <li><a href="#portfolio"><b>PORTFOLIO</b></a></li>
+        <li><a href="#home"><b>HOME</b></a></li>
+        <li><a href="#aboutme"><b>ABOUT ME</b></a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div id="aboutme" class="container text-center">
-
-  	<h1 class="header">About Me</h1>
-    <div id="first" class="collapse">
-  	<div class="row me">
-  		<div class="col-sm-12 text-left">
-    		<p>My name is Kirk Youngdahl.</p>
-      		<p>I have always had a fascination with computers since childhood and always believed that I would be the "computer guy" when I grew up.</p>
-      		<p>My first exposure was on a ViewSonic desktop that was shared by our entire family of six. It weighed a ton and it sat in the corner of our cold, dark basement. It was competitive to find time to myself to play on it, but when I did, it opened up a whole new world. The computer was my command center and my potential was limitless. Looking back, those were definitely the simpler days and I am amazed by the advancements that have occurred in my short lifetime.</p>
-      		<p>I have studied many aspects of IT over the last few years and have been amazed by all the different directions these studies could take me in my career. My future holds much promise with my upcoming graduation in December 2017 with a B.S. in Information Technology.  I am excited for the opportunity to be a contributor to further innovation in the tech world in the years ahead. </p>
-          <p>Through course work at Metrostate I have constructed multiple websites and developed a fully functional database.</p>
-          <p>During my enrollment at Minnesota State - Mankato I took a System Analysis and Design course. This class gave us the opportunity to consult with actual company representatives and design a software application specifically for them. This project allowed me to demonstrate leadership for my struggling team resulting in an A grade for the semester.  I was offered a tutor position for the class by my professor for the following semester.</p>
-          <p>I had the opportunity to do a Summer internship with WinField, at Land o' Lakes company in 2015. This experience consisted of working with Linux systems, writing scripts for file systems or writing macros for marketing analysis. The highlight of my internship was working on WinField's data tool, Equinox, where I added new ways to sort data.</p>
-          <p>Past job experiences I have worked closely with others in a fast-paced setting. I am a strong problem-solver, effective communicator, and a computer-literate performer with extensive software proficiency covering a variety of applications.</p>
-    	</div>
-  	</div>
-  	<div class="row me">
-    	<div id="bio" class="col-sm-12">
+<div id="home" class="top text-center">
+  <div class="row me">
+      <div id="bio" class="col-sm-12">
           <img src="images/hipsterbaby.jpg" alt="Random Name">
         </div>
+    </div>
+</div>
+
+<div id="aboutme" class="container text-center">
+	<h1 class="header">About Me</h1>
+	<div class="row me">
+		<div class="col-sm-12 text-left">
+  		<p>My name is Kirk Youngdahl.</p>
+    		<p>I have always had a fascination with computers since childhood and always believed that I would be the "computer guy" when I grew up.</p>
+    		<p>My first exposure was on a ViewSonic desktop that was shared by our entire family of six. It weighed a ton and it sat in the corner of our cold, dark basement. It was competitive to find time to myself to play on it, but when I did, it opened up a whole new world. The computer was my command center and my potential was limitless. Looking back, those were definitely the simpler days and I am amazed by the advancements that have occurred in my short lifetime.</p>
+    		<p>I have studied many aspects of IT over the last few years and have been amazed by all the different directions these studies could take me in my career. My future holds much promise with my upcoming graduation in December 2017 with a B.S. in Information Technology.  I am excited for the opportunity to be a contributor to further innovation in the tech world in the years ahead. </p>
+        <p>Through course work at Metrostate I have constructed multiple websites and developed a fully functional database.</p>
+        <p>During my enrollment at Minnesota State - Mankato I took a System Analysis and Design course. This class gave us the opportunity to consult with actual company representatives and design a software application specifically for them. This project allowed me to demonstrate leadership for my struggling team resulting in an A grade for the semester.  I was offered a tutor position for the class by my professor for the following semester.</p>
+        <p>I had the opportunity to do a Summer internship with WinField, at Land o' Lakes company in 2015. This experience consisted of working with Linux systems, writing scripts for file systems or writing macros for marketing analysis. The highlight of my internship was working on WinField's data tool, Equinox, where I added new ways to sort data.</p>
+        <p>Past job experiences I have worked closely with others in a fast-paced setting. I am a strong problem-solver, effective communicator, and a computer-literate performer with extensive software proficiency covering a variety of applications.</p>
   	</div>
-  </div>
-
-</div>
-</a>
-
-
-<div id="portfolio" class="container text-center">
-  <h1 class="header">Portfolio</h1>
-  <p>here are past projects I have worked on starting with most recent</p>
-  <div class="row">
-
-  <!-- SILC project -->
-  <div class="col-md-4">
-    <div class="thumbnail text-center">
-        <a href="portfolio/RankByX">Rank By X Puzzle</a>
-    </div>
-  </div>
-
-
-  <div class="col-md-4">
-    <div class="thumbnail">
-      <a href="/w3images/nature.jpg">
-        <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
-        <div class="caption">
-          <p>Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
-  </div>
-  <div class="col-md-4">
-    <div class="thumbnail">
-      <a href="/w3images/fjords.jpg">
-        <img src="/w3images/fjords.jpg" alt="Fjords" style="width:100%">
-        <div class="caption">
-          <p>Lorem ipsum...</p>
-        </div>
-      </a>
-    </div>
-  </div>
-</div>
+	</div>
 </div>
 
 
